--- a/src/app/main-components/header/header.component.html
+++ b/src/app/main-components/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
   <div class="header">
     <div class="header-logo">
-      <embed src="assets/img/logo.svg">
+      <img src="assets/img/logo.svg" />
     </div>
     <div class="header-settings">
       <div class="profile-image bd-{{(userLogged$ | async).theme}}" *ngIf="(userLogged$ | async)" (click)='logout()'>
