--- a/src/app/main-components/header/header.component.scss
+++ b/src/app/main-components/header/header.component.scss
@@ -3,9 +3,6 @@
 header {
   padding: 10px 0;
   background: $header-background;
-  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.55);
-  -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.55);
-  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.55);
 
   .header {
     display: flex;
@@ -15,12 +12,18 @@ header {
     width: 90%;
 
     img {
-      height: 29px;
+      height: 34px;
     }
 
     .header-settings {
       display: flex;
       align-items: center;
+
+      .title-user {
+        margin-right: 10px;
+        color: $lightest-gray;
+        font-size: 15px;
+      }
 
       .signIn-container {
         font-size: 14px;
@@ -48,6 +51,11 @@ header {
         border-width: 3px;
         border-style: solid;
         cursor: pointer;
+        transition: all .3s ease;
+
+        &:hover {
+          transform: scale(0.95, 0.95);
+        }
 
         img {
           height: 100%;
