--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -65,7 +65,7 @@
       <div class="poster-container">
         <div class="img-poster" [ngStyle]="{'background-image': 'url(' + movie.poster_path + ')'}"></div>
         <div class="overlay">
-          <div class="poster-detail flex-column">
+          <div class="poster-detail flex-column" *ngIf="!(wathLaterLoading$ | async) || movie.id !== movieWatchLaterIdActive">
             <h3 class="poster-title">{{movie.original_title}} ({{movie.year}})</h3>
 
             <span class="poster-chip {{utils.getClassCategory(movie.category)}}">{{categoryEnum[movie.category]}}</span>
@@ -79,11 +79,13 @@
             </div>
 
             <div class="poster-actions flex-row">
-                <a [routerLink]="" matTooltip="Assistir depois" class="watch-later"><mat-icon>access_time</mat-icon></a>
-                <a [routerLink]="" (click)="openDialog(movie.imdb_link)" matTooltip="Indicar {{categoryEnum[movie.category]}}" class="indicate-now"><mat-icon>playlist_add</mat-icon></a>
+                <button type="button" (click)="setWatchLater(movie.id, movie.watch_later)" matTooltip="Assistir depois"
+                  class="watch-later" [ngClass]="{'active':  movie.watch_later}"><mat-icon>access_time</mat-icon></button>
+                <button type="button" (click)="openDialog(movie.imdb_link)" matTooltip="Indicar {{categoryEnum[movie.category]}}" class="indicate-now"><mat-icon>playlist_add</mat-icon></button>
                 <a href="#" matTooltip="Mais informações" class="more-details"><mat-icon>arrow_forward</mat-icon></a>
             </div>
           </div>
+          <app-loading *ngIf="(wathLaterLoading$ | async) && movie.id === movieWatchLaterIdActive"></app-loading>
         </div>
       </div>
     </div>
