--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -98,6 +98,8 @@
           opacity: 0;
           background: rgba(0,0,0,0.80);
           backface-visibility: hidden;
+          display: flex;
+          align-items: center;
 
           &:hover {
             opacity: 1;
@@ -107,6 +109,7 @@
             align-items: center;
             justify-content: space-between;
             padding: 15px;
+            width: 100%;
             height: 100%;
             box-sizing: border-box;
 
@@ -137,13 +140,24 @@
               justify-content: space-around;
               width: 100%;
 
-              a {
+              a, button {
+                border: 0;
+                padding: 0;
+                background: none;
                 color: $white;
+                cursor: pointer;
+                outline: none;
 
                 &:hover {
                   &.watch-later { color: $logo-pink; }
                   &.indicate-now { color: $logo-green; }
                   &.more-details{ color: $logo-blue; }
+                }
+              }
+
+              button {
+                &.active {
+                  &.watch-later { color: $logo-pink; }
                 }
               }
             }
