Starting Profile page development

--- a/src/app/main-components/header/header.component.html
+++ b/src/app/main-components/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
   <div class="header">
     <div class="header-logo">
-      <img src="assets/img/logo.svg" />
+      <a [routerLink]="['']"><img src="assets/img/logo.svg" /></a>
     </div>
     <div class="header-settings">
       <ng-container *ngIf="(userLogged$ | async)">
@@ -10,7 +10,7 @@
           <img src="{{(userLogged$ | async).avatar}}">
         </div>
         <mat-menu #menuPerfil="matMenu" xPosition="before">
-          <button mat-menu-item><mat-icon>person_outline</mat-icon> Perfil</button>
+          <button mat-menu-item [routerLink]="['/profile']"><mat-icon>person_outline</mat-icon> Perfil</button>
           <button mat-menu-item><mat-icon>access_time</mat-icon> Asssitir depois</button>
           <button mat-menu-item><mat-icon>list</mat-icon> Minhas indicações</button>
           <button mat-menu-item (click)='logout()'><mat-icon>close</mat-icon> Sair</button>
