--- a/src/app/main-components/header/header.component.scss
+++ b/src/app/main-components/header/header.component.scss
@@ -11,8 +11,10 @@ header {
     margin: 0 auto;
     width: 90%;
 
-    img {
-      height: 34px;
+    .header-logo {
+      img {
+        height: 34px;
+      }
     }
 
     .header-settings {
@@ -55,12 +57,6 @@ header {
 
         &:hover {
           transform: scale(0.95, 0.95);
-        }
-
-        img {
-          height: 100%;
-          margin-left: 50%;
-          transform: translateX(-50%);
         }
       }
 
