--- a/src/app/profile/detail/profile-detail.component.html
+++ b/src/app/profile/detail/profile-detail.component.html
@@ -1,3 +1,50 @@
-<p>
-  detail works!
-</p>
+<section class="{{setBgContainer((userLogged$ | async).theme)}}" *ngIf="(userLogged$ | async)">
+  <div class="container-detail padding-2 flex-row flex-wrap">
+    <div class="flex-row col-md-6 col-sm-12">
+      <div class="profile-image bd-{{(userLogged$ | async).theme}} margin-right-1">
+        <img src="{{(userLogged$ | async).avatar}}">
+      </div>
+      <div class="detail flex-column">
+        <div class="flex-column margin-bottom-05">
+          <span class="title-profile-detail">{{(userLogged$ | async).name}}</span>
+          <span></span>
+        </div>
+        <div class="flex-column margin-bottom-05">
+          <span class="subtitle-profile-detail">Membro desde Janeiro 30, 2019</span>
+        </div>
+        <!-- <div class="flex-column">
+          <label class="label-theme">Tema</label>
+          <div class="flex-row">
+            <button class="btn-theme bg-yellow margin-right-1" (click)="updateProfile(userLogged$, 'YELLOW')"><mat-icon *ngIf="(userLogged$ | async).theme === 'YELLOW'">done</mat-icon></button>
+            <button class="btn-theme bg-green margin-right-1" (click)="updateProfile(userLogged$, 'GREEN')"><mat-icon *ngIf="(userLogged$ | async).theme === 'GREEN'">done</mat-icon></button>
+            <button class="btn-theme bg-pink margin-right-1" (click)="updateProfile(userLogged$, 'PINK')"><mat-icon *ngIf="(userLogged$ | async).theme === 'PINK'">done</mat-icon></button>
+            <button class="btn-theme bg-red margin-right-1" (click)="updateProfile(userLogged$, 'RED')"><mat-icon *ngIf="(userLogged$ | async).theme === 'RED'">done</mat-icon></button>
+            <button class="btn-theme bg-blue" (click)="updateProfile(userLogged$, 'BLUE')"><mat-icon *ngIf="(userLogged$ | async).theme === 'BLUE'">done</mat-icon></button>
+          </div>
+        </div> -->
+      </div>
+    </div>
+    <div class="flex-row col-md-6 col-sm-12 container-statistic">
+        <div class="flex-column col-md-3 detail-statistic">
+            <span>43</span>
+            <span>Assisti depois</span>
+        </div>
+        <div class="flex-column col-md-3 detail-statistic">
+            <span>13</span>
+            <span>Indicações</span>
+        </div>
+        <div class="flex-column col-md-3 detail-statistic">
+            <span>123</span>
+            <span>Seguindo</span>
+        </div>
+        <div class="flex-column col-md-3 detail-statistic">
+            <span>552</span>
+            <span>Seguidores</span>
+        </div>
+
+    </div>
+  </div>
+</section>
+<main class="main">
+
+</main>
