--- a/src/assets/scss/overwrites/_menu.scss
+++ b/src/assets/scss/overwrites/_menu.scss
@@ -1,6 +1,9 @@
 .mat-menu-panel {
-  background: $logo-blue;
   margin-top: 5px;
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.7);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.7);
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.7) !important;
+
 
   .mat-menu-item {
     color: $lighter-gray;
