--- a/src/app/main-components/header/header.component.html
+++ b/src/app/main-components/header/header.component.html
@@ -9,7 +9,7 @@
         <div class="profile-image bd-{{(userLogged$ | async).theme}}" [matMenuTriggerFor]="menuPerfil">
           <img src="{{(userLogged$ | async).avatar}}">
         </div>
-        <mat-menu #menuPerfil="matMenu" xPosition="before">
+        <mat-menu #menuPerfil="matMenu" xPosition="before" class="{{utils.getClassBgTheme((userLogged$ | async).theme)}}">
           <button mat-menu-item [routerLink]="['/profile']"><mat-icon>person_outline</mat-icon> Perfil</button>
           <button mat-menu-item><mat-icon>access_time</mat-icon> Asssitir depois</button>
           <button mat-menu-item><mat-icon>list</mat-icon> Minhas indicações</button>
