--- a/src/app/main-components/header/header.component.scss
+++ b/src/app/main-components/header/header.component.scss
@@ -77,3 +77,12 @@ header {
   }
 }
 
+@media (max-width: 480px) {
+  header {
+    .header {
+      .header-settings {
+        .title-user { display: none; }
+      }
+    }
+  }
+}
