--- a/src/app/profile/detail/profile-detail.component.scss
+++ b/src/app/profile/detail/profile-detail.component.scss
@@ -6,6 +6,7 @@
   box-sizing: border-box;
   align-items: center;
   color: $white;
+  max-width: 1460px;
 
   .flex-row {
     align-items: center;
