Development of the profile page

--- a/src/app/profile/detail/profile-detail.component.html
+++ b/src/app/profile/detail/profile-detail.component.html
@@ -90,8 +90,10 @@
                 </div>
                 <span class="subtitle-item">Escolha uma cor que goste para seu perfil</span>
                 <div class="form" [ngClass]="{'active': formOpenned === 'theme'}" [ngStyle]="{'max-height': heightForms.theme}">
-                  <div class="container-theme">
-                    11111<br />11111
+                  <div class="container-theme margin-top-1">
+                    <div class="flex-row col-md-12 flex-wrap">
+                      <button class="btn-theme bg-{{color}}" *ngFor="let color of colorsTheme" (click)='updateTheme(color)'><mat-icon *ngIf="(userLogged$ | async).theme === color">done</mat-icon></button>
+                    </div>
                   </div>
                 </div>
               </div>
