--- a/src/app/profile/detail/profile-detail.component.scss
+++ b/src/app/profile/detail/profile-detail.component.scss
@@ -121,6 +121,8 @@
           transition: all .4s ease;
           outline: none;
           margin: 5px;
+          justify-content: center;
+          padding: 3px 0;
 
           &:first-child { margin-left: 0; }
           &:last-child { margin-right: 0; }
@@ -128,6 +130,12 @@
           &:hover {
             opacity: 0.7;
             cursor: pointer;
+          }
+
+          .mat-icon {
+            font-size: 21px;
+            height: auto;
+            width: auto;
           }
         }
       }
