--- a/src/app/profile/detail/profile-detail.component.scss
+++ b/src/app/profile/detail/profile-detail.component.scss
@@ -11,17 +11,6 @@
   .flex-row {
     align-items: center;
 
-    .profile-image {
-      width: 120px;
-      height: 120px;
-      border-radius: 50%;
-      position: relative;
-      overflow: hidden;
-      text-align: center;
-      border-width: 4px;
-      border-style: solid;
-    }
-
     .detail {
       div {
         label {
@@ -52,6 +41,18 @@
       }
     }
   }
+}
+
+.profile-image {
+  width: 120px;
+  height: 120px;
+  min-width: 120px;
+  border-radius: 50%;
+  position: relative;
+  overflow: hidden;
+  text-align: center;
+  border-width: 4px;
+  border-style: solid;
 }
 
 .tab-profile {
@@ -115,6 +116,24 @@
         }
 
         form { align-items: flex-start; }
+        .hidden-input { visibility: hidden; position: absolute; }
+        .profile-image { margin: 0 auto; }
+
+        .inputAvatar {
+          background: $darkest-gray;
+          border: 1px dashed $darkest-gray-border;
+          border-radius: $radius-default;
+          padding: 12px 0;
+          margin: 10px 0;
+          align-items: center;
+          justify-content: center;
+          transition: background .4s ease;
+
+          &:hover {
+            cursor: pointer;
+            background: rgba(51, 51, 51, .6) // $darkest-gray
+          }
+        }
 
         .btn-theme {
           border: 0;
